--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ a:hover {
 
 @media (min-width: 750px) {
   
-  main {
+  body {
     height: 100vh;
     display: flex;
     align-items: center;
